# keychron-tray-rs

./: .gitlab-ci.yml  70-keychron.rules  Cargo.toml  LICENSE  README.md  build.rs
.gitlab/: release_template.md
assets/: 70-keychron.rules
doc/: README.md
src/: keychron_device.rs  keychron_hid.rs  main.rs  report.rs  tray.rs  udev.rs
