[package]
name = "keychron-tray-rs"
description = "Tray applet for Keychron mice and keyboards."
version = "0.1.0"
edition = "2024"
authors = ["Philipp Richter <richterphilipp.pops@gmail.com>"]
license = "GPL-3.0"

[dependencies]
hidapi = "2.6"
num_enum = "0.7"
tokio = { version = "1.49", features = ["full"] }
trayicon = { version = "0.3", git = "https://github.com/Ciantic/trayicon-rs.git", branch = "master" }
webbrowser = "1.0"
