[package]
name = "keychron-tray-rs"
description = "Tray applet for Keychron mice and keyboards."
version = "0.1.0"
edition = "2024"
authors = ["Philipp Richter <richterphilipp.pops@gmail.com>"]
license = "GPL-3.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
hidapi = "2.6"
notify-rust = "4.11"
num_enum = "0.7"
tokio = { version = "1.49", features = ["full"] }
trayicon = { version = "0.4", git = "https://github.com/Ciantic/trayicon-rs.git", branch = "master" }
webbrowser = "1.0"

[build-dependencies]
static_vcruntime = "3"
winresource = "0.1"

[package.metadata.winresource]
OriginalFilename = "Keychron-tray-rs.exe"
LegalCopyright = "Copyright © 2026 Philipp Richter"
